<package>
    <name>cmu_perception_msgs</name>
    <version>0.1.0</version>
    <description>

        Holds the action description and generated messages for the NaviGANs tasks

    </description>
    <maintainer email="lenscmu@ri.cmu.edu">Luis E. Navarro-Serment</maintainer>
    <license>None</license>
    <license>CMU-LimitedReleaseUnderRCTA</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>

